; ModuleID = '/home/carl/AnghaBench/git/extr_diff.c_free_filespec.c'
source_filename = "/home/carl/AnghaBench/git/extr_diff.c_free_filespec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.diff_filespec = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @free_filespec(%struct.diff_filespec* %0) #0 {
  %2 = alloca %struct.diff_filespec*, align 8
  store %struct.diff_filespec* %0, %struct.diff_filespec** %2, align 8
  %3 = load %struct.diff_filespec*, %struct.diff_filespec** %2, align 8
  %4 = getelementptr inbounds %struct.diff_filespec, %struct.diff_filespec* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = add nsw i32 %5, -1
  store i32 %6, i32* %4, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %13, label %8

8:                                                ; preds = %1
  %9 = load %struct.diff_filespec*, %struct.diff_filespec** %2, align 8
  %10 = call i32 @diff_free_filespec_data(%struct.diff_filespec* %9)
  %11 = load %struct.diff_filespec*, %struct.diff_filespec** %2, align 8
  %12 = call i32 @free(%struct.diff_filespec* %11)
  br label %13

13:                                               ; preds = %8, %1
  ret void
}

declare dso_local i32 @diff_free_filespec_data(%struct.diff_filespec*) #1

declare dso_local i32 @free(%struct.diff_filespec*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
